hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-13:
Typing error (Typing[4110])
  File "foreach_vector.php", line 21, characters 10-17:
  Expected `num` because this is used in an arithmetic operation
  File "foreach_vector.php", line 18, characters 19-21:
  But got `Foo`
  File "collections/Vector.hhi", line 46, characters 50-51:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 552, characters 49-50:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 295, characters 56-57:
    via this generic `Tv`
  File "interfaces.hhi", line 123, characters 66-67:
    via this generic `Tv`
  File "interfaces.hhi", line 93, characters 53-54:
    via this generic `Tv`
  File "rx/interfaces.hhi", line 26, characters 52-53:
    via this generic `Tv`
